refactor: Refatora o controller para incluir o ResponseEntity nas minha rotas e customiza a resposta das requisições do cliente